# enigma-code

./: .gitignore  README.md  imports.py  pyproject.toml
data engineering/database design/: hotel.sql
data engineering/populate data/: hotel.sql
datasets/: rules_and_regulations.txt  sample_text.txt
enigma_code/: agents.py  data.py  databases.py  fine_tuning.py  prompts.py  rag.py  vectorstore.py
enigma_code/nodes/: hotel.py
enigma_code/tools/: assistant.py  car_rental.py  excursions.py  flights.py  hotels.py  rag.py
notebooks/: LangGraph.ipynb  customer-service-template.ipynb  customer-support.ipynb  imports.py  notebook.ipynb
src/: data.py
tests/: test_data.py
