[tool.poetry]
name = "enigma-code"
version = "0.1.0"
description = "A library designed for managing and handling tasks that utilize LLMs."
authors = ["Soheil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
pandas = "^2.2.2"
langchain = "^0.2.8"
langchain-community = "^0.2.7"
matplotlib = "^3.9.1"
faiss-gpu = "^1.7.2"
faiss-cpu = "^1.8.0.post1"
pinecone = "^4.0.0"
chroma = "^0.2.0"
ipykernel = "^6.29.5"
tiktoken = "^0.7.0"
transformers = "^4.42.4"
sentence-transformers = "^3.0.1"
pycparser = "^2.22"
lxml = "^5.2.2"
mysql-connector = "^2.2.9"
cohere = "^5.6.1"
openai = "^1.35.14"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
bs4 = "^0.0.2"
peft = "^0.11.1"
ipywidgets = "^8.1.3"
wandb = "^0.17.4"
bitsandbytes = "^0.43.1"
groq = "^0.9.0"
langgraph = "^0.1.9"
langchain-groq = "^0.1.6"
chromadb = "^0.5.4"
ollama = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
